--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 			<div class="loader"></div>
 		</div>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/masdumek/disk@main/js/workers.js" async></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/masdumek/masdumek.github.io@main/inject.js" async></script>
 	</body>
 </html>
